Various fixes for mobile and accessibility - Remove the vertical lines next to the text paragraphs when in mobile view for the Houston section on the community page. - Change the aria label for the Open Liberty GitHub logo link - Fix overlapping @media queries

--- a/src/main/content/_assets/css/community.css
+++ b/src/main/content/_assets/css/community.css
@@ -71,7 +71,7 @@
     margin: 98px auto;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 768px) {
     /* DESKTOP VIEW */
 
     #social_media_row {
@@ -170,12 +170,16 @@
         margin-bottom: 60px;
     }
 
-    #houston_description {
+    #houston_description_1,
+    #houston_description_2 {
         padding: 0;
         border-left: none;
         margin-left: 0;
     }
 
+    #houston_description_2 {
+        margin-top: 20px;
+    }
 }
 
 
